--- a/ProjektGDE/style.css
+++ b/ProjektGDE/style.css
@@ -11,7 +11,8 @@
     --transition: 0.3s ease-in-out;
 }
 
-/* domyślne tło naszej kadej strony*/
+/* domyślne ustawienia naszej kadej strony*/
+
 body {
     margin: auto;
     padding: 0;
@@ -21,6 +22,7 @@ body {
     height: 100vh;
     text-align: center;
     background: linear-gradient(to right, #6b8c8c, #1e3a4c);
+    font-family: var(--ff);
     
 }
 
@@ -94,12 +96,20 @@ a {
     justify-content: center;
     width: 150px;
     height: 50px;
+
+    
+}
+
+.button:hover {
+    background: #f5e6a8;
+    transition: var(--transition);
 }
 
 /*ustawienia obrazka*/
 .image-section img {
     width: 500px;
     border-radius: 90px;
+    box-shadow: 20px 15px 25px rgba(51, 94, 87, 0.335);
 }
 
 
@@ -141,6 +151,124 @@ a {
     text-decoration: none; 
     font-size: 20px;
 }
+
+/*-------2.html-------*/
+
+
+.container {
+    background: var(--colorbody);
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 5px 14px 6px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    width: 100%;
+    display: flex;
+    max-width: 1200px;
+
+}
+
+.logo {
+    display: block;
+    margin: 0 auto 20px;
+    max-width: 200px;
+    border-radius: 50%;
+}
+
+/*panel z boku*/
+.sidebar {
+    max-width: 120px;
+    background: rgba(255, 255, 255, 0.2);
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: var(--shadow);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 1;
+    text-align: center;
+    height: 475px;
+}
+/*obrazek w panelu*/
+.sidebar img {
+    width: 80px;
+    height: 80px;
+    margin-bottom: 20px;
+    
+}
+/*tekst w panelu*/
+.sidebar a {
+    display: block;
+    padding: 10px;
+    background: var(--color1);
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    margin: 10px 0;
+    transition: var(--transition);
+}
+/*przejscie*/
+.sidebar a:hover {
+    background: var(--color3);
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+}
+
+nav ul li {
+    margin: 10px 0;
+}
+
+nav ul li a {
+    display: block;
+    color: white;
+    text-decoration: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 16px;
+    text-align: center;
+}
+
+nav ul li a:hover {
+    background-color: #1f3f63;
+    
+}
+
+
+.content {
+    flex: 2;
+    padding: 20px;
+    align-items: center;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    gap: 20px;
+    width: 100%;
+    
+
+
+}
+
+.box {
+    width: 100%;
+    height: 50%;
+    background: var(--color3);
+    padding: 20px;
+    margin: 10px 0;
+    border-radius: 20px;
+    font-size: 18px;
+    box-shadow: var(--shadow);
+    align-items: center;
+    flex: 1; /* Ensures equal width */    
+    justify-content: center; 
+    align-content: baseline;
+    display: flex;
+    font-weight: lighter;
+
+}
+
 
 
 
