--- a/ProjektGDE/style.css
+++ b/ProjektGDE/style.css
@@ -1,6 +1,7 @@
 :root {
     --ff: "Montserrat", sans-serif;
     --h1: 46px/22px var(--ff);
+
     --a: 24px/30px var(--ff);
     --colorbody: #6b8c8c;
     --color1: #447286;
@@ -163,7 +164,7 @@ a {
     text-align: center;
     width: 100%;
     display: flex;
-    max-width: 1200px;
+    max-width: 1100px;
 
 }
 
@@ -240,7 +241,6 @@ nav ul li a:hover {
     flex: 2;
     padding: 20px;
     align-items: center;
-    color: white;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -259,7 +259,6 @@ nav ul li a:hover {
     margin: 10px 0;
     border-radius: 20px;
     font-size: 18px;
-    box-shadow: var(--shadow);
     align-items: center;
     flex: 1; /* Ensures equal width */    
     justify-content: center; 
@@ -268,6 +267,80 @@ nav ul li a:hover {
     font-weight: lighter;
 
 }
+
+.box a {
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+}
+
+
+/*--------3.html--------*/
+
+/* Main content */
+.content3 {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+    color: white;
+    
+}
+
+/* Header */
+.header {
+    width: 100%;
+    padding: 5px;
+    background: var(--color3);
+    border-radius: 40px;
+    font-size: 14px;
+    text-align: center;
+    margin: 10px 0;
+    max-width: 800px;
+  
+}
+.header a {
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+}
+/* Search Bar */
+.search-bar {
+    width: 100%;
+    background: var(--color1);
+    padding: 10px;
+    border-radius: 30px;
+    margin-top: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 650px;
+}
+
+.search-bar input {
+    width: 100%;
+    padding: 10px;
+    border: none;
+    border-radius: 20px;
+    outline: none;
+}
+
+.box-container {
+    flex: 2;
+    padding: 20px;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    gap: 20px;
+    width: 100%;
+    max-width: 1000px;
+}
+
+
+
 
 
 
