--- a/ProjektGDE/style.css
+++ b/ProjektGDE/style.css
@@ -56,6 +56,36 @@ body {
     text-align: left;
     
 }
+.text-section img {
+    width: 40%;
+    margin: 0;
+    padding: 0;
+}
+.image-container {
+    position: relative;
+    display: block;
+}
+
+.image-container img {
+    width: 80%;
+    max-width: 150px;
+    
+    
+}
+
+.text-overlay {
+    position: absolute;
+    top: 40px; 
+    left: 30px;
+    transform: translate(-0%, -0%);
+    color:var(--color2);  
+    font-size: 15px; 
+    font-weight: bold;
+    text-align: center;
+    max-width: 200px;
+    width: auto;
+    
+}
 
 /*ustawienia sekcji nazwy Olimpiady*/
 .nazwa {
@@ -153,7 +183,7 @@ a {
     font-size: 20px;
 }
 
-/*-------2.html-------*/
+/*-------lista konkursow i olimpiad.html-------*/
 
 
 .container {
@@ -181,7 +211,6 @@ a {
     background: rgba(255, 255, 255, 0.2);
     padding: 20px;
     border-radius: 5px;
-    box-shadow: var(--shadow);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -194,7 +223,7 @@ a {
     width: 80px;
     height: 80px;
     margin-bottom: 20px;
-    
+    border-radius: 0%;
 }
 /*tekst w panelu*/
 .sidebar a {
@@ -275,7 +304,7 @@ nav ul li a:hover {
 }
 
 
-/*--------3.html--------*/
+/*--------zwalniajace z matury.html--------*/
 
 /* Main content */
 .content3 {
@@ -338,6 +367,29 @@ nav ul li a:hover {
     width: 100%;
     max-width: 1000px;
 }
+
+/*zwalniajace z matury*/
+/*czciona w listach*/
+.list a {
+    font-size: 15px;
+    color: white;
+    margin: 1px 0;
+    display: flex;
+
+
+}
+/*lista olimpiad*/
+.list {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    gap: 1px;
+    width: 100%;
+    max-width: 900px;
+    padding: auto;
+}
+
+
 
 
 
