--- a/ProjektGDE/style.css
+++ b/ProjektGDE/style.css
@@ -5,11 +5,11 @@
     --a: 24px/30px var(--ff);
     --colorbody: #6b8c8c;
     --color1: #447286;
-    --color2: #fad5e1;
+    --color2: #d5a4b3;
     --color3: #bd7b8a;
     --color4: #163737;
     --shadow: #00000030 0px 0px 10px 0px;
-    --transition: 0.3s ease-in-out;
+    --transition: 0.4s ease-in-out;
 }
 
 /* domyślne ustawienia naszej kadej strony*/
@@ -156,6 +156,10 @@ a {
     width: 900px;
     margin: 0 auto;
     padding: 20px;
+    justify-content: center;
+    text-align: center;
+    height: 250px;
+    
 
 }
 .style_main > div {
@@ -164,24 +168,10 @@ a {
 }
 
 /*ustawienia boxow*/
-.box1, .box2 {
-    background-color: var(--color3);
-    flex: 1.5;
-    border-radius: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    height: 250px;
-      
-}
 
-.box1 a, .box2 a {
-    color: white; 
-    font-weight: lighter;
-    text-decoration: none; 
-    font-size: 20px;
-}
+
+
+
 
 /*-------lista konkursow i olimpiad.html-------*/
 
@@ -294,6 +284,8 @@ nav ul li a:hover {
     align-content: baseline;
     display: flex;
     font-weight: lighter;
+    min-width: 200px;
+    min-height: 250px;
 
 }
 
@@ -301,6 +293,12 @@ nav ul li a:hover {
     color: white;
     text-decoration: none;
     font-size: 20px;
+    font-weight: lighter;
+}
+
+.box:hover {
+    background-color: var(--color2);
+    transition: var(--transition);
 }
 
 
@@ -387,6 +385,12 @@ nav ul li a:hover {
     width: 100%;
     max-width: 900px;
     padding: auto;
+}
+.list a:hover {
+    background-color: var(--color1);
+    transition: var(--transition);
+    max-width: 500px;
+    border-radius: 20px;
 }
 
 
